--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,8 @@ repositories {
 }
 
 dependencies {
+    compile('org.slf4j:slf4j-api:1.7.21')
+    compile('ch.qos.logback:logback-classic:1.1.7')
+    compile('ch.qos.logback:logback-core:1.1.7')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
