--- a/alpha-concurrency/build.gradle
+++ b/alpha-concurrency/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
     compile('com.google.guava:guava:25.1-jre')
+    compile('joda-time:joda-time:2.9')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
