--- a/alpha-kafka/build.gradle
+++ b/alpha-kafka/build.gradle
@@ -12,5 +12,14 @@ repositories {
 }
 
 dependencies {
+    compile('org.projectlombok:lombok:1.18.2')
+    compile('org.slf4j:slf4j-api:1.7.21')
+    compile('ch.qos.logback:logback-classic:1.1.7')
+    compile('ch.qos.logback:logback-core:1.1.7')
+    compile('com.google.guava:guava:25.1-jre')
+    
+    compile('org.apache.kafka:kafka-clients:1.1.0')
+    compile('io.confluent:kafka-avro-serializer:3.2.1')
+    
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
