--- a/alpha-kafka/build.gradle
+++ b/alpha-kafka/build.gradle
@@ -19,7 +19,14 @@ dependencies {
     compile('com.google.guava:guava:25.1-jre')
     
     compile('org.apache.kafka:kafka-clients:1.1.0')
-    compile('io.confluent:kafka-avro-serializer:3.2.1')
+    compile "org.apache.avro:avro:1.8.0"
+    
+//    compile('io.confluent:kafka-avro-serializer:3.2.1')
+    
+//    compile group: 'org.apache.avro', name: 'avro', version: '1.8.2'
+
+
+//    compile group: 'kafka-avro-confluent', name: 'kafka-avro-confluent', version: '0.1.0'
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
