--- a/alpha-mongodb/build.gradle
+++ b/alpha-mongodb/build.gradle
@@ -12,6 +12,9 @@ repositories {
 }
 
 dependencies {
+    compile 'org.mongodb:mongodb-driver-sync:3.8.1'
+    compile 'org.mongodb:mongo-java-driver:3.8.1'
+
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
