--- a/alpha-mongodb/build.gradle
+++ b/alpha-mongodb/build.gradle
@@ -14,6 +14,8 @@ repositories {
 dependencies {
     compile 'org.mongodb:mongodb-driver-sync:3.8.1'
     compile 'org.mongodb:mongo-java-driver:3.8.1'
+    
+    compile 'org.mongodb.morphia:morphia:1.3.2'
 
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
