--- a/alpha-jdk/build.gradle
+++ b/alpha-jdk/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     compile('ch.qos.logback:logback-core:1.1.7')
 
     compile('org.projectlombok:lombok:1.18.2')
+    compile('com.google.guava:guava:25.1-jre')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
