--- a/alpha-mongodb/build.gradle
+++ b/alpha-mongodb/build.gradle
@@ -16,11 +16,14 @@ dependencies {
     compile 'org.mongodb:mongo-java-driver:3.8.1'
     
     compile 'org.mongodb.morphia:morphia:1.3.2'
+    compile 'org.springframework.data:spring-data-mongodb:2.0.9.RELEASE'
+    
 
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
 
     compile('org.projectlombok:lombok:1.18.2')
+    compile('org.apache.commons:commons-lang3:3.8')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
