--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ dependencies {
     compile('ch.qos.logback:logback-core:1.1.7')
 
     compile('org.projectlombok:lombok:1.18.2')
+    compile('org.apache.commons:commons-lang3:3.8')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
