--- a/alpha-redis/build.gradle
+++ b/alpha-redis/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compile('org.projectlombok:lombok:1.18.2')
     compile('org.apache.commons:commons-lang3:3.8')
 
+    compile('com.alibaba:fastjson:1.2.49')
     compile('redis.clients:jedis:2.9.0')
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
