[redis] bloom filter init

--- a/alpha-redis/build.gradle
+++ b/alpha-redis/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 
     compile('com.alibaba:fastjson:1.2.49')
     compile('redis.clients:jedis:2.9.0')
-    
+    compile('com.redislabs:jrebloom:1.0-SNAPSHOT')
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
