--- a/alpha-design-pattern/build.gradle
+++ b/alpha-design-pattern/build.gradle
@@ -12,5 +12,11 @@ repositories {
 }
 
 dependencies {
+    compile('org.slf4j:slf4j-api:1.7.21')
+    compile('ch.qos.logback:logback-classic:1.1.7')
+    compile('ch.qos.logback:logback-core:1.1.7')
+
+    compile('org.projectlombok:lombok:1.18.2')
+    compile('org.apache.commons:commons-lang3:3.8')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
