--- a/alpha-redis/build.gradle
+++ b/alpha-redis/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 
     compile('com.alibaba:fastjson:1.2.49')
     compile('redis.clients:jedis:2.9.0')
+
+    compile('com.google.guava:guava:25.1-jre')
     
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
