[redis] sentinel config file: fix dir

--- a/alpha-redis/src/main/resources/redis_2-sentinel/conf/sentinel-26381.conf
+++ b/alpha-redis/src/main/resources/redis_2-sentinel/conf/sentinel-26381.conf
@@ -1,7 +1,7 @@
 port 26381
 daemonize yes
 logfile "26381.log"
-dir /opt/soft/redis/data
+dir ./data
 sentinel monitor mymaster 127.0.0.1 6379 2
 sentinel down-after-milliseconds mymaster 30000
 sentinel parallel-syncs mymaster 1
