--- a/alpha-redis/src/main/resources/redis_2-sentinel/conf/sentinel-26380.conf
+++ b/alpha-redis/src/main/resources/redis_2-sentinel/conf/sentinel-26380.conf
@@ -1,7 +1,7 @@
 port 26380
 daemonize yes
 logfile "26380.log"
-dir /opt/soft/redis/data
+dir ./data
 sentinel monitor mymaster 127.0.0.1 6379 2
 sentinel down-after-milliseconds mymaster 30000
 sentinel parallel-syncs mymaster 1
