[redis] appendonly yes

--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6379.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6379.conf
@@ -11,3 +11,5 @@ logfile "cluster-6379.log"
   
 dbfilename dump-cluster-6379.rdb
 appendfilename "appendonly-cluster-6379.aof"
+appendonly yes
+appendfsync everysec
