--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6380.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6380.conf
@@ -11,3 +11,5 @@ logfile "cluster-6380.log"
   
 dbfilename dump-cluster-6380.rdb
 appendfilename "appendonly-cluster-6380.aof"
+appendonly yes
+appendfsync everysec
