--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6381.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6381.conf
@@ -11,3 +11,5 @@ logfile "cluster-6381.log"
   
 dbfilename dump-cluster-6381.rdb
 appendfilename "appendonly-cluster-6381.aof"
+appendonly yes
+appendfsync everysec
