--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6382.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6382.conf
@@ -11,3 +11,5 @@ logfile "cluster-6382.log"
   
 dbfilename dump-cluster-6382.rdb
 appendfilename "appendonly-cluster-6382.aof"
+appendonly yes
+appendfsync everysec
