--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6383.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6383.conf
@@ -11,3 +11,5 @@ logfile "cluster-6383.log"
   
 dbfilename dump-cluster-6383.rdb
 appendfilename "appendonly-cluster-6383.aof"
+appendonly yes
+appendfsync everysec
