--- a/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6384.conf
+++ b/alpha-redis/src/main/resources/redis_3-cluster/conf/cluster-6384.conf
@@ -11,3 +11,5 @@ logfile "cluster-6384.log"
   
 dbfilename dump-cluster-6384.rdb
 appendfilename "appendonly-cluster-6384.aof"
+appendonly yes
+appendfsync everysec
