--- a/alpha-zookeeper/build.gradle
+++ b/alpha-zookeeper/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile group: 'org.apache.curator', name: 'curator-framework', version: '4.0.1'
     compile group: 'org.apache.curator', name: 'curator-recipes', version: '4.0.1'
 
+    compile group: 'org.apache.curator', name: 'curator-test', version: '4.0.1'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
