[ops] nginx conf validate script

--- a/alpha-ops/src/main/resources/confd/confd/conf.d/s3-asset.conf.toml
+++ b/alpha-ops/src/main/resources/confd/confd/conf.d/s3-asset.conf.toml
@@ -1,3 +1,3 @@
 [template]
 src = "s3-asset.conf.tmpl"
-dest = "/pang/program/nginx/conf/hosts/assets/s3-asset.conf"
+dest = "../target/conf/hosts/assets/s3-asset.conf"
