--- a/alpha-jdk/build.gradle
+++ b/alpha-jdk/build.gradle
@@ -18,5 +18,8 @@ dependencies {
 
     compile('org.projectlombok:lombok:1.18.2')
     compile('com.google.guava:guava:25.1-jre')
+
+    compile group: 'org.springframework', name: 'spring-core', version: '4.3.13.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
