--- a/alpha-netty/build.gradle
+++ b/alpha-netty/build.gradle
@@ -21,6 +21,9 @@ dependencies {
 
     compile('com.alibaba:fastjson:1.2.49')
     compile('com.google.guava:guava:25.1-jre')
-    
+
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.30.Final'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
