--- a/alpha-ops/build.gradle
+++ b/alpha-ops/build.gradle
@@ -1,6 +1,11 @@
+
+
 plugins {
     id 'java'
 }
+
+apply plugin: 'war'
+//apply plugin: 'tomcat'
 
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
@@ -17,6 +22,11 @@ dependencies {
     compile('ch.qos.logback:logback-core:1.1.7')
 
     compile('org.projectlombok:lombok:1.18.2')
-    
+
+    // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.2.RELEASE'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
