--- a/alpha-concurrency/build.gradle
+++ b/alpha-concurrency/build.gradle
@@ -25,5 +25,8 @@ dependencies {
     // https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
     compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.6.0-M2'
 
+    // https://mvnrepository.com/artifact/org.multiverse/multiverse-core
+    compile group: 'org.multiverse', name: 'multiverse-core', version: '0.7.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
