--- a/alpha-algorithm/build.gradle
+++ b/alpha-algorithm/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile('com.google.guava:guava:25.1-jre')
 }
