--- a/alpha-concurrency/build.gradle
+++ b/alpha-concurrency/build.gradle
@@ -11,13 +11,24 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    lombokVersion = '1.18.10'
+}
+
 dependencies {
-    compile('org.projectlombok:lombok:1.18.2')
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
     compile('com.google.guava:guava:25.1-jre')
     compile('joda-time:joda-time:2.9')
+    
+    // for akka actor: download the corresponding Scala runtime library
+    compile('org.apache.kafka:kafka_2.12:1.1.0')
 
     // https://mvnrepository.com/artifact/com.lmax/disruptor
     compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
