--- a/alpha-design-pattern/build.gradle
+++ b/alpha-design-pattern/build.gradle
@@ -11,12 +11,20 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    lombokVersion = '1.18.10'
+}
+
 dependencies {
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
 
-    compile('org.projectlombok:lombok:1.18.2')
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    
     compile('org.apache.commons:commons-lang3:3.8')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
