--- a/alpha-kafka/build.gradle
+++ b/alpha-kafka/build.gradle
@@ -11,8 +11,16 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    lombokVersion = '1.18.10'
+}
+
 dependencies {
-    compile('org.projectlombok:lombok:1.18.2')
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
