--- a/alpha-mongodb/build.gradle
+++ b/alpha-mongodb/build.gradle
@@ -11,7 +11,16 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    lombokVersion = '1.18.10'
+}
+
 dependencies {
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
     compile 'org.mongodb:mongodb-driver-sync:3.8.1'
     compile 'org.mongodb:mongo-java-driver:3.8.1'
 
@@ -21,6 +30,5 @@ dependencies {
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
 
-    compile('org.projectlombok:lombok:1.18.2')
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
