--- a/alpha-ops/build.gradle
+++ b/alpha-ops/build.gradle
@@ -14,12 +14,19 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    lombokVersion = '1.18.10'
+}
+
 dependencies {
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+
     compile('org.slf4j:slf4j-api:1.7.21')
     compile('ch.qos.logback:logback-classic:1.1.7')
     compile('ch.qos.logback:logback-core:1.1.7')
-
-    compile('org.projectlombok:lombok:1.18.2')
 
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
