--- a/alpha-concurrency/build.gradle
+++ b/alpha-concurrency/build.gradle
@@ -39,5 +39,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.multiverse/multiverse-core
     compile group: 'org.multiverse', name: 'multiverse-core', version: '0.7.0'
 
+    implementation 'com.pivovarit:parallel-collectors:1.1.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
