--- a/alpha-flink/build.gradle
+++ b/alpha-flink/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation "org.apache.flink:flink-connector-kafka_2.12:${flinkVersion}"
     implementation "org.apache.flink:flink-streaming-scala_2.12:${flinkVersion}"
     implementation "org.apache.flink:flink-streaming-java_2.12:${flinkVersion}"
+    implementation "org.apache.flink:flink-clients_2.12:${flinkVersion}"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
