fix compile issue.

--- a/alpha-resilience4j/build.gradle
+++ b/alpha-resilience4j/build.gradle
@@ -6,7 +6,11 @@ plugins {
 
 group = 'com.alphawang.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 configurations {
     compileOnly {
