--- a/alpha-algorithm/build.gradle
+++ b/alpha-algorithm/build.gradle
@@ -5,13 +5,16 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile('com.google.guava:guava:25.1-jre')
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation('com.google.guava:guava:25.1-jre')
 }
