--- a/alpha-auth/build.gradle
+++ b/alpha-auth/build.gradle
@@ -8,7 +8,11 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.alphawang'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 configurations {
     compileOnly {
@@ -28,7 +32,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-    compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 //    implementation 'com.auth0:java-jwt:3.8.0'
 
