--- a/alpha-concurrency/build.gradle
+++ b/alpha-concurrency/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,25 +24,25 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
-    compile('com.google.guava:guava:25.1-jre')
-    compile('joda-time:joda-time:2.9')
-    
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
+    implementation('com.google.guava:guava:25.1-jre')
+    implementation('joda-time:joda-time:2.9')
+
     // for akka actor: download the corresponding Scala runtime library
-    compile('org.apache.kafka:kafka_2.12:1.1.0')
+    implementation('org.apache.kafka:kafka_2.12:1.1.0')
 
     // https://mvnrepository.com/artifact/com.lmax/disruptor
-    compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
+    implementation group: 'com.lmax', name: 'disruptor', version: '3.4.2'
 
     // https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
-    compile group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.6.0-M2'
+    implementation group: 'com.typesafe.akka', name: 'akka-actor_2.12', version: '2.6.0-M2'
 
     // https://mvnrepository.com/artifact/org.multiverse/multiverse-core
-    compile group: 'org.multiverse', name: 'multiverse-core', version: '0.7.0'
+    implementation group: 'org.multiverse', name: 'multiverse-core', version: '0.7.0'
 
     implementation 'com.pivovarit:parallel-collectors:1.1.0'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
