--- a/alpha-jdk/build.gradle
+++ b/alpha-jdk/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,15 +24,15 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
 
-    compile('com.google.guava:guava:25.1-jre')
-    compile group: 'commons-lang', name: 'commons-lang', version: '2.6'
+    implementation('com.google.guava:guava:25.1-jre')
+    implementation group: 'commons-lang', name: 'commons-lang', version: '2.6'
 
 
-    compile group: 'org.springframework', name: 'spring-core', version: '4.3.13.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-core', version: '4.3.13.RELEASE'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
