--- a/alpha-kafka/build.gradle
+++ b/alpha-kafka/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,20 +24,20 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
-    compile('com.google.guava:guava:25.1-jre')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
+    implementation('com.google.guava:guava:25.1-jre')
 
-    compile('org.apache.kafka:kafka-clients:1.1.0')
-    compile "org.apache.avro:avro:1.8.0"
+    implementation('org.apache.kafka:kafka-clients:1.1.0')
+    implementation "org.apache.avro:avro:1.8.0"
 
-//    compile('io.confluent:kafka-avro-serializer:3.2.1')
+//    implementation('io.confluent:kafka-avro-serializer:3.2.1')
 
-//    compile group: 'org.apache.avro', name: 'avro', version: '1.8.2'
+//    implementation group: 'org.apache.avro', name: 'avro', version: '1.8.2'
 
 
-//    compile group: 'kafka-avro-confluent', name: 'kafka-avro-confluent', version: '0.1.0'
+//    implementation group: 'kafka-avro-confluent', name: 'kafka-avro-confluent', version: '0.1.0'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
