--- a/alpha-mongodb/build.gradle
+++ b/alpha-mongodb/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,14 +24,14 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile 'org.mongodb:mongodb-driver-sync:3.8.1'
-    compile 'org.mongodb:mongo-java-driver:3.8.1'
+    implementation 'org.mongodb:mongodb-driver-sync:3.8.1'
+    implementation 'org.mongodb:mongo-java-driver:3.8.1'
 
-    compile 'org.mongodb.morphia:morphia:1.3.2'
+    implementation 'org.mongodb.morphia:morphia:1.3.2'
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
