--- a/alpha-nacos/build.gradle
+++ b/alpha-nacos/build.gradle
@@ -7,7 +7,11 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.alphawang'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 configurations {
     compileOnly {
@@ -21,7 +25,7 @@ repositories {
 
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -35,5 +39,5 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // https://mvnrepository.com/artifact/com.alibaba.nacos/nacos-spring-context
-    compile group: 'com.alibaba.nacos', name: 'nacos-spring-context', version: '0.2.3-RC1'
+    implementation group: 'com.alibaba.nacos', name: 'nacos-spring-context', version: '0.2.3-RC1'
 }
