--- a/alpha-ops/build.gradle
+++ b/alpha-ops/build.gradle
@@ -8,14 +8,17 @@ apply plugin: 'war'
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -24,19 +27,19 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
 
     // https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.2.RELEASE'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.1.2.RELEASE'
 
     // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
-    compile group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.21'
+    implementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.21'
     // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-annprocess
-    compile group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.21'
+    implementation group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.21'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
