--- a/alpha-redis/build.gradle
+++ b/alpha-redis/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,16 +24,16 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
 
-    compile('org.apache.commons:commons-lang3:3.8')
+    implementation('org.apache.commons:commons-lang3:3.8')
 
-    compile('com.alibaba:fastjson:1.2.49')
-    compile('redis.clients:jedis:2.9.0')
+    implementation('com.alibaba:fastjson:1.2.49')
+    implementation('redis.clients:jedis:2.9.0')
 
-    compile('com.google.guava:guava:25.1-jre')
+    implementation('com.google.guava:guava:25.1-jre')
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
