--- a/alpha-websocket/build.gradle
+++ b/alpha-websocket/build.gradle
@@ -7,7 +7,11 @@ apply plugin: 'io.spring.dependency-management'
 
 group = 'com.alphawang.demo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
