--- a/alpha-zookeeper/build.gradle
+++ b/alpha-zookeeper/build.gradle
@@ -5,14 +5,17 @@ plugins {
 group 'com.alphawang'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 
 repositories {
     mavenCentral()
 }
 
 ext {
-    lombokVersion = '1.18.10'
+    lombokVersion = '1.18.30'
 }
 
 dependencies {
@@ -21,19 +24,19 @@ dependencies {
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    compile('org.slf4j:slf4j-api:1.7.21')
-    compile('ch.qos.logback:logback-classic:1.1.7')
-    compile('ch.qos.logback:logback-core:1.1.7')
+    implementation('org.slf4j:slf4j-api:1.7.21')
+    implementation('ch.qos.logback:logback-classic:1.1.7')
+    implementation('ch.qos.logback:logback-core:1.1.7')
 
-    compile('org.apache.commons:commons-lang3:3.8')
+    implementation('org.apache.commons:commons-lang3:3.8')
 
-    compile group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.5.4-beta', ext: 'pom'
-    compile group: 'org.apache.curator', name: 'curator-framework', version: '4.0.1'
-    compile group: 'org.apache.curator', name: 'curator-recipes', version: '4.0.1'
+    implementation group: 'org.apache.zookeeper', name: 'zookeeper', version: '3.5.4-beta', ext: 'pom'
+    implementation group: 'org.apache.curator', name: 'curator-framework', version: '4.0.1'
+    implementation group: 'org.apache.curator', name: 'curator-recipes', version: '4.0.1'
 
-    compile group: 'org.apache.curator', name: 'curator-test', version: '4.0.1'
+    implementation group: 'org.apache.curator', name: 'curator-test', version: '4.0.1'
 
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
